--- a/src/UserEvents/EventItem/EventItemLayout.module.scss
+++ b/src/UserEvents/EventItem/EventItemLayout.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  margin: 2px 0 16px 0;
+  margin: 0 0 16px 0;
   padding: 0;
   background: transparent;
   border: none;
