--- a/src/UserEvents/EventItem/EventItemLayout.module.scss
+++ b/src/UserEvents/EventItem/EventItemLayout.module.scss
@@ -4,14 +4,14 @@
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  margin: 0 0 16px 0;
+  margin-bottom: 16px;
   padding: 0;
   background: transparent;
   border: none;
   outline: none;
   text-align: start;
   font-size: 16px;
-  color: inherit;
+  color: var(--fgColor-default);
 }
 
 button.container {
@@ -21,7 +21,7 @@ button.container {
     color: var(--fgColor-accent);
 
     &:has(a:hover) {
-      color: inherit;
+      color: var(--fgColor-default);
     }
   }
 }
